Added Travis CI

--- a/html/options.html
+++ b/html/options.html
@@ -25,6 +25,9 @@
                                 <option value="Shippable">
                                     Shippable
                                 </option>
+                                <option value="Travis CI">
+                                    Travis CI
+                                </option>
                             </select>
                         </td>
                         <td>
@@ -35,7 +38,7 @@
                         <td>
                             <input type="text"
                                    id="extra"
-                                   placeholder="project id">
+                                   placeholder="project id (only shippable)">
                         </td>
                         <td><button id="add">Add</button></td>
                     </tr>
