Updated the name

--- a/html/options.html
+++ b/html/options.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Chrome Bitbucket CI Status Options</title>
+        <title>Bitbucket CI Status Options</title>
         <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600"
               rel="stylesheet"
               type="text/css">
